# tool-gosh

./: .gitignore  CHANGELOG.txt  CMakeLists.txt  README.md  TODO.txt  gosh-core.py  gosh.sh  install.ps1  install.sh
gosh/: gosh.ps1  gosh.sh  gosh2.py
libs/fmt/include/fmt/: chrono.h  compile.h  core.h  format-inl.h  format.h  os.h  ranges.h
scripts/: bump_version.sh
src/: Algo.hpp  Array.hpp  Assert.hpp  Basic.hpp  BasicTypes.hpp  BuildInfo.hpp  CodeUtils.hpp  CommandLine.cpp  CommandLine.hpp  Debug.hpp  Discovery.hpp  FileUtils.cpp  FileUtils.hpp  Macros.hpp  Math.hpp  OS.hpp  PathUtils.hpp  Result.hpp  String.cpp  String.hpp  Terminal.cpp  Terminal.hpp  Win32_PathUtils.cpp  gosh-core.py  gosh.cpp  gosh.ps1  gosh.sh  gosh2.py  gosh_bash-completion.sh
src/Platform/Win32/: BasicWin32Headers.hpp
